--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 publish_to: 'none'
 
 environment:
-  sdk: ^3.10.7
+  sdk: ^3.10.4
   flutter: ">=1.17.0"
 
 dependencies:
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
   asallenshih_flutter_util:
     git: https://github.com/ASAllenShih/asallenshih_flutter_util
+  cross_platform_ui:
+    git: https://github.com/ASAllenShih/cross_platform_ui
+  retry: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -23,7 +26,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
