新增 collection 套件依賴；重構 TdxBasicCityApi 和 TdxBusRouteApi 以使用 firstWhereOrNull 方法

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cross_platform_ui:
     git: https://github.com/ASAllenShih/cross_platform_ui
   retry: ^3.1.2
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
