--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     git: https://github.com/ASAllenShih/cross_platform_ui
   retry: ^3.1.2
   collection: ^1.19.1
+  flutter_color: ^2.1.0
 
 dev_dependencies:
   flutter_test:
